--- a/litreview.bib
+++ b/litreview.bib
@@ -1064,3 +1064,38 @@
     year={2013},
     organization={ACM}
 }
+
+
+@inproceedings{zaharia_spark:_2010,
+    title = {Spark: cluster computing with working sets},
+    shorttitle = {Spark},
+    url = {http://static.usenix.org/legacy/events/hotcloud10/tech/full_papers/Zaharia.pdf},
+    urldate = {2014-11-07},
+    booktitle = {Proceedings of the 2nd {USENIX} conference on {Hot} topics in cloud computing},
+    author = {Zaharia, Matei and Chowdhury, Mosharaf and Franklin, Michael J. and Shenker, Scott and Stoica, Ion},
+    year = {2010},
+    pages = {10--10},
+}
+
+
+@inproceedings{xin_graphx:_2013,
+    title = {Graphx: {A} resilient distributed graph system on spark},
+    shorttitle = {Graphx},
+    url = {http://dl.acm.org/citation.cfm?id=2484427},
+    urldate = {2014-12-12},
+    booktitle = {First {International} {Workshop} on {Graph} {Data} {Management} {Experiences} and {Systems}},
+    publisher = {ACM},
+    author = {Xin, Reynold S. and Gonzalez, Joseph E. and Franklin, Michael J. and Stoica, Ion},
+    year = {2013},
+    pages = {2},
+}
+
+@article{meng2016mllib,
+    title={Mllib: Machine learning in apache spark},
+    author={Meng, Xiangrui and Bradley, Joseph and Yavuz, Burak and Sparks, Evan and Venkataraman, Shivaram and Liu, Davies and Freeman, Jeremy and Tsai, DB and Amde, Manish and Owen, Sean and others},
+    journal={Journal of Machine Learning Research},
+    volume={17},
+    number={34},
+    pages={1--7},
+    year={2016}
+}
