--- a/litreview.bib
+++ b/litreview.bib
@@ -1099,3 +1099,21 @@
     pages={1--7},
     year={2016}
 }
+
+@article{zaharia2012discretized,
+    title={Discretized Streams: An Efficient and Fault-Tolerant Model for Stream Processing on Large Clusters.},
+    author={Zaharia, Matei and Das, Tathagata and Li, Haoyuan and Shenker, Scott and Stoica, Ion},
+    journal={HotCloud},
+    volume={12},
+    pages={10--10},
+    year={2012}
+}
+
+@inproceedings{armbrust2015spark,
+    title={Spark sql: Relational data processing in spark},
+    author={Armbrust, Michael and Xin, Reynold S and Lian, Cheng and Huai, Yin and Liu, Davies and Bradley, Joseph K and Meng, Xiangrui and Kaftan, Tomer and Franklin, Michael J and Ghodsi, Ali and others},
+    booktitle={Proceedings of the 2015 ACM SIGMOD International Conference on Management of Data},
+    pages={1383--1394},
+    year={2015},
+    organization={ACM}
+}
