--- a/litreview.tex
+++ b/litreview.tex
@@ -773,7 +773,7 @@ MLlib not only provides a wide range of algorithms on top of Spark, but also int
 MLlib also provides utilities for defining ML workflows and pipelines. MLlib specifically provides support for feature transformations, model evaluation, parameter tuning, and persisting models to and from the ML pipeline.
 
 \subsubsection{Spark SQL}
-Spark SQL provides for relation processing capabilities in Spark\cite{armbrust2015spark}.
+Spark SQL provides relational processing capabilities in Spark\cite{armbrust2015spark}.
 
 
 \subsubsection{Tez}
@@ -809,13 +809,6 @@ Pregel was designed as a computational model to compute results on large graph d
 
 \subsection{Flink}
 Apache Flink\cite{carbone2015apache} is an open source stream and batch processing engine.
-
-
-
-
-
-
-
 
 
 \subsection{MapReduce/Hadoop and Other Related Technologies}
