--- a/litreview.bib
+++ b/litreview.bib
@@ -1117,3 +1117,24 @@
     year={2015},
     organization={ACM}
 }
+
+@inproceedings{gonzalez2012powergraph,
+    title={PowerGraph: Distributed Graph-Parallel Computation on Natural Graphs.},
+    author={Gonzalez, Joseph E and Low, Yucheng and Gu, Haijie and Bickson, Danny and Guestrin, Carlos},
+    booktitle={OSDI},
+    volume={12},
+    number={1},
+    pages={2},
+    year={2012}
+}
+
+@article{low2012distributed,
+    title={Distributed GraphLab: a framework for machine learning and data mining in the cloud},
+    author={Low, Yucheng and Bickson, Danny and Gonzalez, Joseph and Guestrin, Carlos and Kyrola, Aapo and Hellerstein, Joseph M},
+    journal={Proceedings of the VLDB Endowment},
+    volume={5},
+    number={8},
+    pages={716--727},
+    year={2012},
+    publisher={VLDB Endowment}
+}
